--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -1,9 +1,9 @@
 body {
-    font-size: 16px;
-    color: #000000;
-    background-color: #ffffff;
-    font-family: 'Oxygen', sans-serif;
-  }
+  font-size: 16px;
+  color: #000000;
+  background-color: #ffffff;
+  font-family: 'Oxygen', sans-serif;
+}
 
 h1 {
   font-size: 2em;
@@ -13,6 +13,7 @@ h1 {
   text-align: center;
   margin-bottom: 40px;
 }
+
 #box {
   position: relative;
   background-color: #a5a5a5;
@@ -25,81 +26,117 @@ h1 {
 
 #content {
   padding: 10px;
+  text-align: left;
 }
+
 #p1 {
   font-size: 1.2em;
   text-align: center;
   margin-bottom: 0px;
 }
 
+/** HEADER **/
+#header-nav {
+  background-color: #a5a5a5;
+  border-radius: 0;
+  border: solid 2px;
+}
 
-  /** HEADER **/
-  #header-nav {
-    background-color:#a5a5a5;
-    border-radius: 0;
-    border: 0;
-  }
+.container-fluid {
+  padding: 10px;
+  background-color: #a5a5a5;
+  margin: 20px ;
+  height: 1000px;
+}
 
-  .container{
-    padding: 15px;
-    border: solid;
-    margin: 0;
-  }
+.navbar-brand {
+  padding: 15px;
+  border: 15px;
+}
 
-  .navbar-brand {
-    padding: 15px;
-    border: 15px;
-  }
-  
-  .navbar-brand h1 { /* Restaurant name */
-    font-family: 'Oxygen', sans-serif;
-    color: #000000;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: .75;
-  }
+.navbar-brand h1 {
+  /* Restaurant name */
+  font-family: 'Oxygen', sans-serif;
+  color: #000000;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
+}
 
-  .navbar-brand a:hover, .navbar-brand a:focus {
-    text-decoration: none;
-  }
+.navbar-brand a:hover,
+.navbar-brand a:focus {
+  text-decoration: none;
+}
 
-  .navbar-brand p { /* Kosher cert */
-    color: #000;
-    text-transform: uppercase;
-    font-size: .7em;
-    margin-top: 15px;
-  }
-  .navbar-brand p span { /* Star-K */
-    vertical-align: middle;
-  } 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+.navbar-brand p {
+  /* Kosher cert */
+  color: #000;
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-top: 15px;
+}
+
+.navbar-brand p span {
+  /* Star-K */
+  vertical-align: middle;
+}
+
+.navbar-header button.navbar-toggle,
+.navbar-header .icon-bar {
   border: 2px solid #000;
 }
+
+
 #nav-list {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
 #nav-list a {
   color: #951C49;
   text-align: center;
 }
+
 #nav-list a:hover {
-  background: #E7E7E7;
+  background: #ffffff;
 }
+
+.navbar-toggle:hover .icon-bar {
+  border: 2px solid #ffffff;
+}
+
 #nav-list a span {
   font-size: 1.8em;
 }
-#collapsable-nav a { /* Collapsed nav menu text */
+
+#collapsable-nav a {
+  /* Collapsed nav menu text */
   font-size: 1.2em;
-  color:black;
+  color: black;
   font-size: bold;
   text-align: center;
 }
-#collapsable-nav a span { /* Collapsed nav menu glyph */
+
+#collapsable-nav a span {
+  /* Collapsed nav menu glyph */
   font-size: 1em;
   margin-right: 5px;
+}
+
+/********** Desktop only **********/
+@media (min-width: 1200px) {
+
+}
+
+/********** Tablet only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/********** Mobile only **********/
+@media (min-width: 768px) and (max-width: 991px) {
 
 }
